--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 https://www.djangoproject.com/download/1.5c1/tarball/
+South==0.7.6
 argparse==1.2.1
 gunicorn==0.17.2
+psycopg2==2.4.6
 wsgiref==0.1.2
