--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ gunicorn==0.17.2
 psycopg2==2.4.6
 wsgiref==0.1.2
 git+git://github.com/azavea/eco.py.git
-python-omgeo==1.5.4
+pep8==1.4.6
+flake8==2.0
