--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argparse==1.2.1
 gunicorn==0.17.2
 psycopg2==2.4.6
 wsgiref==0.1.2
+numpy==1.7.1
 git+git://github.com/azavea/eco.py.git
 pep8==1.4.6
 flake8==2.0
