--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ git+git://github.com/azavea/eco.py.git
 pep8==1.4.6
 flake8==2.0
 python-omgeo==1.5
+git+git://github.com/azavea/django-registration.git
