--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "grunt-browserify": "~1.2",
-    "grunt": "~0.4"
+    "grunt": "~0.4",
+    "grunt-contrib-jshint": "~0.6.0"
   },
   "repository": {
     "type": "git",
