--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "baconjs": "~0.6",
-    "underscore": "~1.5"
+    "underscore": "~1.5",
+    "mustache": "~0.7.2"
   },
   "devDependencies": {
     "grunt-browserify": "~1.2",
