--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "baconjs": "~0.6",
     "underscore": "~1.5",
-    "mustache": "~0.7.2"
+    "mustache": "~0.7.2",
+    "querystring": "~0.2.0",
+    "url": "~0.7.9"
   },
   "devDependencies": {
     "grunt-browserify": "~1.2",
