--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "grunt": "~0.4",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-sass": "~0.6.1"
+    "grunt-sass": "~0.6.1",
+    "grunt-contrib-concat": "~0.3.0"
   },
   "repository": {
     "type": "git",
