--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-sass": "~0.6.1",
+    "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-concat": "~0.3.0"
   },
   "repository": {
