Add and configure celery (with redis)

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ flake8==2.0
 python-omgeo==1.5
 git+git://github.com/azavea/django-registration.git
 modgrammar-py2==0.9.1
+django-celery-with-redis==3.0
