--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "underscore": "~1.5",
     "mustache": "~0.7.2",
     "querystring": "~0.2.0",
-    "url": "~0.7.9"
+    "url": "~0.7.9",
+    "moment": "~2.2.1"
   },
   "devDependencies": {
     "grunt-browserify": "~1.2",
