--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ python-omgeo==1.5
 git+git://github.com/azavea/django-registration.git
 modgrammar-py2==0.9.1
 django-celery-with-redis==3.0
+libsass==0.2.4
