--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,13 @@ psycopg2==2.4.6
 djorm-ext-hstore==0.5
 wsgiref==0.1.2
 numpy==1.7.1
-git+git://github.com/azavea/eco.py.git
+git+https://github.com/azavea/eco.py.git
 pep8==1.4.6
 flake8==2.0
 python-omgeo==1.5
-git+git://github.com/azavea/django-registration.git
+git+https://github.com/azavea/django-registration.git
 modgrammar-py2==0.9.1
 django-celery-with-redis==3.0
 libsass==0.2.4
 # it is planned to add this to pyPi when it is more stable
-git+git://github.com/steventlamb/django-queryset-csv.git
+git+https://github.com/steventlamb/django-queryset-csv.git
