Use custom units and digits in field display and editing
* Add helper functions to units.py
* Make sure plot & tree fields have "in request.instance" so they'll use custom units and digits
* Format display values client-side on form save (digits, units)
* Display eco benefits values using configured units and digits.
* ignore .orig files (generated by kdiff3) and extracollect.py
* Fix inline field tag tests
* Add tests for custom units and digits
* Fixes #330, #371, #458

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ prototype/css/.sass-cache
 # the local directory is a place for keeping unversioned
 # scripts, etc 
 local/
+
+opentreemap/treemap/management/commands/extracollect.py
+
