--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "~2.2.1"
   },
   "devDependencies": {
-    "grunt-browserify": "~1.2",
+    "grunt-browserify": "~1.2.8",
+    "browserify": "2.28",
     "grunt": "~0.4",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.4",
