--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mustache": "~0.7.2",
     "querystring": "~0.2.0",
     "url": "~0.7.9",
-    "moment": "~2.2.1"
+    "moment": "~2.2.1",
+    "console-browserify": "~1.0.1"
   },
   "devDependencies": {
     "grunt-browserify": "~1.2.8",
