--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-sass": "~0.6.1",
     "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-file-creator": "~0.1.1",
+    "mocha": "~1.14.0",
+    "chai": "~1.8.1"
   },
   "repository": {
     "type": "git",
