Support for external MapFeature subclasses
Use Python's __subclasses__() to identify subclasses
* of MapFeature, when creating permissions for testing
* of Auditable and Authorizable, for finding model classes based on class name

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ opentreemap/.idea
 node_modules/
 opentreemap/beta
 opentreemap/cloud_management
+opentreemap/map_features
 opentreemap/super_admin
 opentreemap/treemap/static/js/
 opentreemap/treemap/static/css/
@@ -26,3 +27,4 @@ prototype/css/.sass-cache
 local/
 
 opentreemap/treemap/management/commands/extracollect.py
+
