--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "baconjs": "~0.6",
-    "underscore": "~1.5",
+    "lodash": "2.4.x",
     "mustache": "~0.7.2",
     "querystring": "~0.2.0",
     "url": "~0.7.9",
