Factor out partials for "set location" step and next/prev controls
template tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ opentreemap/.idea
 node_modules/
 opentreemap/beta
 opentreemap/cloud_management
+opentreemap/la
 opentreemap/map_features
 opentreemap/super_admin
 opentreemap/la
