--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ opentreemap/beta
 opentreemap/cloud_management
 opentreemap/map_features
 opentreemap/super_admin
+opentreemap/la
 opentreemap/treemap/static/js/
 opentreemap/treemap/static/css/
 prototypes/static
