--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "grunt-browserify": "1.2.5",
-    "grunt": "~0.4",
+    "grunt": "0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-sass": "~0.6.1",
