--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ boto==2.11.0
 django-storages==1.1.8
 Django==1.5
 South==0.7.6
-PIL==1.1.7
+Pillow==2.3.1
 argparse==1.2.1
 gunicorn==0.17.2
 psycopg2==2.4.6
