--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Pillow==2.3.1
 argparse==1.2.1
 gunicorn==0.17.2
 psycopg2==2.4.6
-djorm-ext-hstore==0.5
+django-hstore==1.2.2
 wsgiref==0.1.2
 pep8==1.4.6
 flake8==2.0
