--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,5 @@ django-contrib-comments==1.5
 django-threadedcomments==0.9.0
 django-apptemplates==0.0.1
 django-queryset-csv>=0.2.7
+django-redis-cache==0.13.0
+git+https://github.com/jmoiron/johnny-cache.git@262525216f0d0ae
