--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ wsgiref==0.1.2
 pep8==1.4.6
 flake8==2.0
 python-omgeo==1.5
-git+https://github.com/azavea/django-registration.git@2d725d7368
+git+https://github.com/azavea/django-registration.git
 modgrammar-py2==0.9.1
 django-celery-with-redis==3.0
 # libsass==0.2.4
