--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ opentreemap/beta
 opentreemap/cloud_management
 opentreemap/la
 opentreemap/map_features
+opentreemap/modeling
 opentreemap/super_admin
 opentreemap/treemap/static/js/
 opentreemap/treemap/static/css/
