--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ django-contrib-comments==1.5
 django-threadedcomments==0.9.0
 django-apptemplates==0.0.1
 django-queryset-csv>=0.2.9
+python-dateutil==2.2
