--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "grunt-browserify": "1.2.5",
     "grunt": "0.4.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-shell": "1.1.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-sass": "~0.6.1",
