Show the instance boundaries during the add process
During the "enable placing" phase of adding a map feature, we show the
instance boundaries are stop the marker from tracking the mouse once
outside the boundaries.

This gives a good visual indication of where to place things in the most
likely time for a plot to be added outside the instance boundaries

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "2.4.x",
     "mustache": "~0.7.2",
     "moment": "~2.2.1",
-    "console-browserify": "~1.0.1"
+    "console-browserify": "~1.0.1",
+    "leaflet-pip": "~0.1.1"
   },
   "devDependencies": {
     "grunt-browserify": "1.2.5",
