Properly integrate our UDFManager with django-hstore
Previously, the UDFWhereNode inherited directly from GeoWhereNode.
Because of this, hstore queries for 'contains' were not being handled by
django-hstore.

This meant that when we did
`Plot.objects.filter(udfs__contains=['Field Name'])` expecting to retrieve
all Plots which had UDFs with the name 'Field Name' in their UDF dict,
using the hstore '?' operator, what we actually ran was the standard 'LIKE'
operator, searching for "%['Field Name']%".

Because of this, deleting UDF fields did not actually delete any values for
that UDF field.  This made it impossible to edit any objects which
contained those deleted UDFs.

Most of the code for generating SQL for accessing hstore columns is now
delegated to the django-hstore library.  One small change was made, which
is in
https://github.com/azavea/django-hstore/tree/cast-lvalues-to-rvalue-type

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ Pillow==2.3.1
 argparse==1.2.1
 gunicorn==0.17.2
 psycopg2==2.4.6
-django-hstore==1.2.2
+# django-hstore==1.2.2
+# We added type casting to django-hstore
+# There is a PR for this here: https://github.com/djangonauts/django-hstore/pull/72
+git+https://github.com/azavea/django-hstore.git@1480f4ef3602a
 wsgiref==0.1.2
 pep8==1.4.6
 flake8==2.0
