--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mustache": "~0.7.2",
     "moment": "~2.2.1",
     "console-browserify": "~1.0.1",
-    "leaflet-pip": "~0.1.1"
+    "leaflet-pip": "~0.1.1",
+    "numeral": "1.5.3"
   },
   "devDependencies": {
     "grunt-browserify": "1.2.5",
