--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "moment": "~2.2.1",
     "console-browserify": "~1.0.1",
     "leaflet-pip": "~0.1.1",
-    "numeral": "1.5.3"
+    "numeral": "1.5.3",
+    "ramda": "0.5.x"
   },
   "devDependencies": {
     "grunt-browserify": "1.2.5",
