--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,16 @@ env:
   global:
     DJANGO_SETTINGS_MODULE="opentreemap.settings"
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 install:
   - pip install -r requirements.txt
   - pip install -r test-requirements.txt
   - npm install
   - npm install -g grunt-cli@0.1.9
+  - npm install -g testem
 
 before_script:
   - cp ci/local_settings.py opentreemap/opentreemap/settings/local_settings.py
@@ -32,3 +37,4 @@ script:
   - flake8 --exclude migrations,opentreemap/settings/local_settings.py,*.pyc opentreemap
   - grunt check
   - python opentreemap/manage.py test
+  - testem ci -l firefox
