--- a/.travis.yml
+++ b/.travis.yml
@@ -23,25 +23,24 @@ before_install:
 install:
   - pip install -r travis-requirements.txt
   - npm install
-  - npm install -g grunt-cli@0.1.9
   - npm install -g testem
 
 before_script:
   - cp ci/local_settings.py opentreemap/opentreemap/settings/local_settings.py
   - psql -c "CREATE EXTENSION hstore;" -U postgres -d template1
-  - psql -c "CREATE DATABASE travis;" -U postgres
-  - psql -c "CREATE EXTENSION postgis;" -U postgres -d travis
+  - psql -c "CREATE DATABASE ci;" -U postgres
+  - psql -c "CREATE EXTENSION postgis;" -U postgres -d ci
   - python opentreemap/manage.py syncdb --noinput
   - python opentreemap/manage.py migrate --noinput
   - mkdir -p /tmp/otm/static
   - mkdir -p /tmp/otm/media
-  - grunt
+  - npm run grunt
   - python opentreemap/manage.py collectstatic --noinput
 
 script:
   - flake8 --exclude migrations,opentreemap/settings/local_settings.py,*.pyc opentreemap
-  - grunt check
-  - testem ci -l firefox
+  - npm run check
+  - testem ci -l Firefox
   - cd opentreemap && coverage run --rcfile=../coveragerc --source=. manage.py test
 
 after_success:
