--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "~2.2.1",
     "mustache": "~0.7.2",
     "numeral": "1.5.3",
-    "ramda": "0.5.x"
+    "ramda": "0.5.x",
+    "sanitize-filename": "~1.4.2"
   },
   "devDependencies": {
     "chai": "~1.8.1",
