Fix running JS tests via testem CI.
The `before_tests` script specified in our testem config was failing
since Grunt needs to run in the virtualenv in order to run collectstatic.

When this script fails, testem just hangs forever for some reason.

I fixed the issue by adding a new Grunt task which just runs the `js` and
`css` tasks (which used to be the default Grunt task).

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-sass": "~0.6.1",
     "grunt-shell": "1.1.1",
     "mocha": "~1.14.0",
-    "testem": "^0.6.24"
+    "testem": "^0.9.2"
   },
   "repository": {
     "type": "git",
@@ -39,7 +39,8 @@
   "scripts": {
     "test": "testem ci",
     "check": "grunt check",
-    "grunt": "grunt"
+    "grunt": "grunt",
+    "grunt-dev-build": "grunt build --dev"
   },
   "author": "Azavea",
   "license": "GPL3",
