--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
 install:
   - pip install -r travis-requirements.txt
   - npm install
+  - npm install -g grunt-cli@0.1.9
 
 before_script:
   - cp ci/local_settings.py opentreemap/opentreemap/settings/local_settings.py
@@ -37,6 +38,7 @@ before_script:
 script:
   - flake8 --exclude migrations,opentreemap/settings/local_settings.py,*.pyc opentreemap
   - npm run check
+  - testem ci -l Firefox
   - cd opentreemap && coverage run --rcfile=../coveragerc --source=. manage.py test
 
 after_success:
