--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ django-threadedcomments==1.0b1
 django-apptemplates==0.0.1
 django-queryset-csv>=0.3.0
 python-dateutil==2.4.2
-pytz==2015.4
+pytz==2015.6
 django-tinsel==0.1.1
 django-url-tools==0.0.8
+django-redis==4.2.0
+hiredis==0.2.0
