--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ git+https://github.com/dahlia/libsass-python.git@4aa8fd3c2cef8c1
 # Django comments are no longer bundled with django in
 # 1.6 so we include them here
 django-contrib-comments==1.6.1
-django-threadedcomments==1.0b1
+django-threadedcomments==1.0
 django-apptemplates==0.0.1
 django-queryset-csv>=0.3.0
 python-dateutil==2.4.2
