management table styles, management header styles, general management cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ opentreemap/opentreemap/settings/local_settings.py
 /static
 .coverage
 .sass-cache
+.DS_Store
 Guardfile
 opentreemap/.idea
 node_modules/
