--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ pep8==1.4.6
 flake8==2.0
 python-omgeo==1.7.2
 django-registration-redux==1.2
-modgrammar-py2==0.9.1
+# Modgrammar-py2 has a 0.9.2 release on PyPi, but no artifacts for the release
+modgrammar-py2==0.9.1 # rq.filter: !=0.9.2
 django-celery-with-redis==3.0
 # libsass==0.2.4
 # We need libsass version 3.0, which fixes libsass issue #54
