Update coverage.py to the latest version.
This had *numerous* breaking API changes, but our usage of the commandline
tool seems to be mostly unaffected by these changes.

I did have to make one change - we have a typo in the path to the .coveragerc
configuration file, which was previously silently ignored.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
   - flake8 --exclude migrations,opentreemap/settings/local_settings.py,*.pyc opentreemap
   - npm run check
   - testem ci -l Firefox
-  - cd opentreemap && coverage run --rcfile=../coveragerc --source=. manage.py test
+  - cd opentreemap && coverage run --rcfile=../.coveragerc --source=. manage.py test
 
 after_success:
   coveralls
