Update Google Analytics tracking code
 - Switch from using Google Tag Manager to using analytics.js directly
 - Use two trackers with different IDs for tracking events globally and
   in aggregate
 - Bring in the `autotrack` analytics plugin, and use it to enable tracking
   of some basic search and add tree buttons.

Connects to #2576

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "doc": "doc"
   },
   "dependencies": {
+    "autotrack": "^0.6.5",
     "baconjs": "~0.6",
     "console-browserify": "~1.0.1",
     "dragula": "^2.0.2",
